--- a/src/site.css
+++ b/src/site.css
@@ -1,5 +1,6 @@
 @import './styles/container-styles.css';
 @import './styles/text-styles.css';
+@import './styles/button-styles.css';
 
 .row {
     margin: 0 !important
