--- a/src/styles/button-styles.css
+++ b/src/styles/button-styles.css
@@ -1,7 +1,8 @@
 .header-conatiner button {
     -webkit-app-region: no-drag;
     margin-left: 10px;
-    font-size: 65%
+    font-size: 65%;
+    margin-bottom: 5px
 }
 
 .header-conatiner button.close-button:hover {
